--- a/_posts/2024-06-26.test2.md
+++ b/_posts/2024-06-26.test2.md
@@ -1,11 +1,11 @@
 ---
-title: test post
+title: abcde
 date: 2024-06-26 13:28:33 +0900
 categories: [TEST]
-tags: [test] # TAG names should always be lowercase
+tags: [abcde] # TAG names should always be lowercase
 authors: [yung6213]
 ---
 
 ## test
 hello
-hi
+welcome
