--- a/_posts/2024-06-26-test2.md
+++ b/_posts/2024-06-26-test2.md
@@ -5,8 +5,7 @@ categories: [TEST]
 tags: [abcde] # TAG names should always be lowercase
 authors: [yung6213]
 ---
-
-## test
-hello
-welcome
-typo
+git에서 fork로 github.io 블로그 파일을 다운받았다.
+그 다음 ruby를 다운받았고, 받은 다음 나오는 커맨드 프롬프트에 1을 입력하여 젬 설치하였다.
+jekyll도 설치하여 블로그의 기본적인 ui를 다운받았다.
+Integer.parseInt
